추천/신고 추가

--- a/static/css/normalUserInfoCheckTemplate.scss
+++ b/static/css/normalUserInfoCheckTemplate.scss
@@ -1,11 +1,9 @@
 @import "color.scss";
 div#infoCheckAndUpdate{
     border:2px dashed greenyellow;
-    height:350px
 }
 div#others{
-    border:2px solid brown;
-    height:100px;
+    border:2px solid $red-700;
 }
 
 input#id_user_warn_count{
