--- a/static/css/normalUserReviewReadTemplate.css
+++ b/static/css/normalUserReviewReadTemplate.css
@@ -1,5 +1,8 @@
+div#reviewInfo {
+  height: 200px;
+}
+
 div#reviewContent {
-  width: 750px;
   height: 250px;
   border: 1px solid grey;
 }
@@ -14,11 +17,6 @@ div.middle {
 
 div#icon {
   height: 228px;
-}
-
-div#images {
-  border: 1px solid red;
-  height: 261px;
 }
 
 /*# sourceMappingURL=normalUserReviewReadTemplate.css.map */
