--- a/templates/normal_user_base.html
+++ b/templates/normal_user_base.html
@@ -22,9 +22,9 @@
         </a>
     </div>
     <div class="nav-item col-3" style="display:inline-block; float:left; height:50px;"></div>
-    <form CLASS="nav-item col-4" id="search-form" style="top:10px;">
+    <form CLASS="nav-item col-4" action="{{normalUserReviewSearch}}" id="search-form" style="top:10px;">
         <div class="nav-item col-9">
-            <input class="form-control" type="search" placeholder="주소로 리뷰 검색" aria-label="Search" id="search-box">
+            <input class="form-control" type="search" placeholder="주소로 리뷰 검색" aria-label="Search" id="address" name="address">
         </div>
         <div class="nav-item col-3">
             <button class="form-control" type="submit" id="search-button">Search</button>
