--- a/static/css/normalUserInfoCheckTemplate.css
+++ b/static/css/normalUserInfoCheckTemplate.css
@@ -1,11 +1,9 @@
 div#infoCheckAndUpdate {
   border: 2px dashed greenyellow;
-  height: 350px;
 }
 
 div#others {
-  border: 2px solid brown;
-  height: 100px;
+  border: 2px solid #842029;
 }
 
 input#id_user_warn_count {
