--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
     <link href="{% static 'css/baseTemplate.css' %}" rel="stylesheet" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script  src="https://code.jquery.com/jquery-latest.min.js"></script>
 </head>
 <body>
     <div class="nav navbar-expand-lg navbar-light bg-red-500" id="headMenu">
