--- a/templates/normal_user_info_check.html
+++ b/templates/normal_user_info_check.html
@@ -4,7 +4,7 @@
 {% block main_contents %}
 <link rel="stylesheet" href="{% static 'css/normalUserInfoCheckTemplate.css' %}">
 <script>
-
+    document.getElementById('dropdownMenuButton1').innerText='{{user.uNickname}}님, 환영합니다.';
 </script>
 <div id="infoCheckAndUpdate">
     <!-정보 확인 및 수정을 위한 공간 / 폼을 통해 정보 확인 및 갱신-->
@@ -14,9 +14,10 @@
             {{userForm.as_table}}
         </table>
         <input type="submit" value="변경하기">
+        <button type="button">탈퇴하기</button>
     </form>
 </div>
 <div id="others">
-    <!-사이트 탈퇴 혹은 작성한 리뷰 목록으로 이동하기 위한 공간-->
+    <!-작성한 리뷰 목록 공간-->
 </div>
 {% endblock %}
