--- a/static/css/baseTemplate.css
+++ b/static/css/baseTemplate.css
@@ -1,33 +1,38 @@
 div#headMenu {
-  height: 50px;
-  border: 1px solid #000;
+  width: auto;
+  height: 7.5vh;
+  border-bottom: 2px solid #B3B3B3;
+  background-color: #fff;
 }
 
 #logo {
   display: inline-block;
   float: left;
-  height: 48px;
-  border: 1px solid #FFCD39;
+  height: 100%;
+  border: 2px solid #FFCD39;
   background-color: #FFCD39;
 }
 
 div#midContent {
+  display: block;
   position: relative;
-  height: 700px;
+  height: 82.5vh;
+  width: 100%;
 }
 
 div.middle {
   display: inline-block;
   float: left;
-  height: 700px;
+  height: 100%;
 }
 
 div#bottomInfoBox {
   position: relative;
-  background-color: #dc3545;
-  top: 2px;
-  border: 1px solid #0d6efd;
-  height: 50px;
+  background-color: #B3B3B3;
+  border: 2px solid #B3B3B3;
+  border-bottom: none;
+  border-collapse: collapse;
+  height: 10vh;
 }
 
 /*# sourceMappingURL=baseTemplate.css.map */
