--- a/static/css/baseTemplate.scss
+++ b/static/css/baseTemplate.scss
@@ -1,6 +1,9 @@
 @import "color.scss";
 
 
+body{
+  font-family:'Noto Sans KR', sans-serif !important;
+}
 div#headMenu{
   width:auto;
   height:7.5vh;
