스크롤 수정

--- a/static/css/normalUserReviewReadTemplate.scss
+++ b/static/css/normalUserReviewReadTemplate.scss
@@ -6,11 +6,9 @@ div#reviewContent{
     height:300px;
     border:1px solid grey;
 }
-div#midContent{
-    height:1000px;
-}
-div.middle{
-    height:1000px;
+div#mainDiv{
+    overflow-y:scroll;
+    overflow-x:hidden;
 }
 div#icon{
     height:228px;
