--- a/static/css/normalUserReviewReadTemplate.css
+++ b/static/css/normalUserReviewReadTemplate.css
@@ -3,16 +3,13 @@ div#reviewInfo {
 }
 
 div#reviewContent {
-  height: 250px;
+  height: 300px;
   border: 1px solid grey;
 }
 
-div#midContent {
-  height: 1000px;
-}
-
-div.middle {
-  height: 1000px;
+div#mainDiv {
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 div#icon {
