--- a/static/css/normalUserBaseTemplate.scss
+++ b/static/css/normalUserBaseTemplate.scss
@@ -17,10 +17,11 @@ div#mainMenu>div.button>a{
 div#userInfo{
     display:inline-block;
 }
-button#login{
+a#login{
     height:50px;
     display:inline-block;
     float:left;
+    background-color:$blue-300;
 }
 form#search-form{
     display:inline-block;
