로그인 기능 미세 조정

--- a/static/css/normalUserSignUpTemplate.css
+++ b/static/css/normalUserSignUpTemplate.css
@@ -6,4 +6,9 @@ div#disclaimer > p {
   text-align: center;
 }
 
+div#disclaimer {
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
 /*# sourceMappingURL=normalUserSignUpTemplate.css.map */
