메인 페이지에 슬라이드 박스 추가

--- a/static/css/normalUserMainTemplate.scss
+++ b/static/css/normalUserMainTemplate.scss
@@ -2,3 +2,10 @@
 div#rightSideMenu{
     display:none;
 }
+.slider>div{
+    height:34vh;
+    margin-bottom:5vh;
+}
+.bx-wrapper{
+    margin-bottom:5vh;
+}
