--- a/static/css/normalUserMainTemplate.css
+++ b/static/css/normalUserMainTemplate.css
@@ -2,4 +2,13 @@ div#rightSideMenu {
   display: none;
 }
 
+.slider > div {
+  height: 34vh;
+  margin-bottom: 5vh;
+}
+
+.bx-wrapper {
+  margin-bottom: 5vh;
+}
+
 /*# sourceMappingURL=normalUserMainTemplate.css.map */
