--- a/templates/normal_user_main.html
+++ b/templates/normal_user_main.html
@@ -1,10 +1,35 @@
 {% extends 'normal_user_base.html' %}
 {% load static %}
 
-{% block main_contents %}
+{% block left_side_bar %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
 <link rel="stylesheet" href="{% static 'css/normalUserMainTemplate.css' %}">
-{% if request.path != login %}
-{% else %}
+<script type="text/javascript" src="{% static 'js/normalUserMainTemplate.js' %}"></script>
+<script>
+$(document).ready(function(){
+    $('.slider').bxSlider({
+        controls:false
+    });
+});
+</script>
+<div class="slider" id="famous">
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+</div>
+<div class="slider" id="recent">
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+</div>
+{% endblock %}
+
+{% block main_contents %}
+{% if request.path == login %}
 <script>
     window.onpageshow = function(event) {
         if (event.persisted) {
