--- a/static/css/normalUserReviewSearchTemplate.scss
+++ b/static/css/normalUserReviewSearchTemplate.scss
@@ -1,8 +1,6 @@
 @import "color.scss";
 div#searchConditionForm{
-    position:absolute;
-    border:2px solid orange;
-    background-color:orange;
+    background-color:#6CD979;
 }
 div#reviewSearchResult{
     position:relative;
