--- a/static/css/normalUserBaseTemplate.css
+++ b/static/css/normalUserBaseTemplate.css
@@ -6,13 +6,14 @@ div#mainMenu {
 div#mainMenu > div.button {
   height: 50px;
   border-width: 1px;
-  background-color: green;
-  border-color: #000;
 }
 
 div#mainMenu > div.button > a {
   display: inline;
+  color: white;
+  text-decoration: none;
   height: 50px;
+  background-color: none;
 }
 
 div#userInfo {
@@ -23,7 +24,8 @@ a#login {
   height: 50px;
   display: inline-block;
   float: left;
-  background-color: #6EA8FE;
+  color: white;
+  text-decoration: none;
 }
 
 form#search-form {
