--- a/static/css/normalUserMainTemplate.scss
+++ b/static/css/normalUserMainTemplate.scss
@@ -4,8 +4,9 @@ div#rightSideMenu{
 }
 .slider>div{
     height:34vh;
-    margin-bottom:5vh;
+    min-height:204px;
+    margin-bottom:35px;
 }
 .bx-wrapper{
-    margin-bottom:5vh;
+    margin-bottom:35px;
 }
