--- a/static/css/normalUserReviewSearchTemplate.css
+++ b/static/css/normalUserReviewSearchTemplate.css
@@ -1,7 +1,5 @@
 div#searchConditionForm {
-  position: absolute;
-  border: 2px solid orange;
-  background-color: orange;
+  background-color: #6CD979;
 }
 
 div#reviewSearchResult {
