--- a/templates/normal_user_base.html
+++ b/templates/normal_user_base.html
@@ -8,16 +8,19 @@
 <link rel="stylesheet" href="{% static 'css/normalUserBaseTemplate.css' %}">
 <div id="mainMenu" class="col-10">
     <div class="button text-center nav-item col-1">
+        <div style="height:1vh;"></div>
         <a href = '#'>
-            지도
+            소개
         </a>
     </div>
     <div class="button text-center nav-item col-1">
+        <div style="height:1vh;"></div>
         <a href = '#'>
             원룸
         </a>
     </div>
     <div class="button text-center nav-item col-1">
+        <div style="height:1vh;"></div>
         <a href = '{{normalUserReviewSearch}}'>
             리뷰
         </a>
@@ -41,7 +44,8 @@
               </ul>
             </div>
         {% else %}
-            <a class="nav-item col-6" type="button" id="login" href="{{ signupPage }}">login</a>
+            <div style="height:1vh;"></div>
+            <a class="nav-item col-6" type="button" id="login" href="{{ loginPage }}">login</a>
             <div class="nav-item col-6" style="display:inline-block; float:left; height:50px;"></div>
         {% endif %}
     </div>
