--- a/templates/normal_user_login.html
+++ b/templates/normal_user_login.html
@@ -3,8 +3,8 @@
 
 {% block main_contents %}
 <link rel="stylesheet" href="{% static 'css/normalUserSignUpTemplate.css' %}">
-{% if request.path != signupPage %}
-<meta http-equiv="refresh" content="0; url='{{signupPage}}'">
+{% if request.path != loginPage %}
+<meta http-equiv="refresh" content="0; url='{{loginPage}}'">
 {% else %}
 <script>
     window.onpageshow = function(event) {
@@ -14,9 +14,6 @@
     };
 </script>
 {% endif %}
-<script type="text/javascript">
-    document.getElementById('mainDiv').style.width='1202px';
-</script>
 <div id="disclaimer">
     <p id="disclaimer_head">
         주의사항
