검색 필터 위치 조정

--- a/static/css/normalUserReviewSearchTemplate.scss
+++ b/static/css/normalUserReviewSearchTemplate.scss
@@ -1,6 +1,9 @@
 @import "color.scss";
-div#searchConditionForm{
+div#leftSideMenu{
     background-color:#6CD979;
+}
+div#searchConditionForm{
+    margin-left:10px;
 }
 div#reviewSearchResult{
     position:relative;
