--- a/static/css/normalUserReviewSearchTemplate.css
+++ b/static/css/normalUserReviewSearchTemplate.css
@@ -1,5 +1,9 @@
-div#searchConditionForm {
+div#leftSideMenu {
   background-color: #6CD979;
+}
+
+div#searchConditionForm {
+  margin-left: 10px;
 }
 
 div#reviewSearchResult {
