--- a/static/css/normalUserReviewSearchTemplate.scss
+++ b/static/css/normalUserReviewSearchTemplate.scss
@@ -1,6 +1,6 @@
 @import "color.scss";
 div#leftSideMenu{
-    background-color:#6CD979;
+    background-color:#0D781A;
 }
 div#searchConditionForm{
     margin-left:10px;
