--- a/static/css/normalUserReviewSearchTemplate.scss
+++ b/static/css/normalUserReviewSearchTemplate.scss
@@ -1,7 +1,4 @@
 @import "color.scss";
-div#leftSideMenu{
-    background-color:#0D781A;
-}
 div#searchConditionForm{
     margin-left:10px;
 }
@@ -14,6 +11,9 @@ div#reviewSearchResult{
 }
 fieldset#common_info{
     display:block;
+}
+fieldset#common_info > label{
+    color:#A23355;
 }
 fieldset#built_year{
     display:block;
