메인 화면에서, js key 지움
깃허브에서 키 노출되는 것 방지

--- a/static/css/baseTemplate.scss
+++ b/static/css/baseTemplate.scss
@@ -25,6 +25,15 @@ div#midContent{
   min-height:495px;
   width:100%;
 }
+div#leftSideMenu{
+  min-width:240px;
+}
+div#mainDiv{
+  min-width:720px;
+}
+div#rightSideMenu{
+  min-width:240px;
+}
 div.middle{
   display:inline-block;
   float:left;
