--- a/static/css/baseTemplate.css
+++ b/static/css/baseTemplate.css
@@ -26,6 +26,18 @@ div#midContent {
   width: 100%;
 }
 
+div#leftSideMenu {
+  min-width: 240px;
+}
+
+div#mainDiv {
+  min-width: 720px;
+}
+
+div#rightSideMenu {
+  min-width: 240px;
+}
+
 div.middle {
   display: inline-block;
   float: left;
