--- a/templates/normal_user_review_search.html
+++ b/templates/normal_user_review_search.html
@@ -3,15 +3,15 @@
 
 {% block left_side_bar %}
 <div id="searchConditionForm">
-    <p style="font-size:30px;">검색 필터</p>
+    <p>리뷰 검색 필터</p>
     <form id="search_filter" action="{{normalUserReviewSearch}}" onsubmit="get_address()" method="get">
-        <fieldset id="common_info">
-            <legend>건물 공유 시설</legend>
-            <input type="checkbox" id="parking_lot" name="commonInfo" value="1">
+        <fieldset id="icons">
+            <legend>포함된 아이콘</legend>
+            <input type="checkbox" id="parking_lot" name="icons" value="1">
             <label class="checkbox-inline" for="parking_lot">주차장</label>
-            <input type="checkbox" id="elevator" name="commonInfo" value="2">
+            <input type="checkbox" id="elevator" name="icons" value="2">
             <label class="checkbox-inline" for="elevator">엘리베이터</label>
-            <input type="checkbox" id="CCTV" name="commonInfo" value="3">
+            <input type="checkbox" id="CCTV" name="icons" value="3">
             <label class="checkbox-inline" for="CCTV">CCTV</label>
         </fieldset>
         <fieldset id="built_year">
@@ -20,13 +20,10 @@
             <span> ~ </span>
             <select id="builtTo" name="builtTo"></select>
         </fieldset>
-        <br>
         <label for="otherOptions">검색 텍스트</label>
-        <br>
         <input class="col-10" name="otherOptions" id="otherOptions" type="text" placeholder="기타 검색 텍스트">
-        <br><br>
         <input name="address" id="search_address" style="display:none;">
-        <a href="javascript:(0)" onclick="document.getElementById('search_filter').submit();">적용</a>
+        <a href="javascript:(0)" onclick="document.getElementById('search_filter').submit();" style="float:right; margin-top:10px; margin-right:25px;">적용</a>
     </form>
 </div>
 {% endblock %}
