--- a/templates/room_test.html
+++ b/templates/room_test.html
@@ -1,5 +1,4 @@
-
-{% extends 'normal_user_base.html' %} 얘한테 가보면 base.html이있어
+{% extends 'normal_user_base.html' %}
 {% load static %}
 <body>
 {% block left_side_bar %}
@@ -24,10 +23,16 @@
 
     <div style="word-spacing:15px; float:right; margin : 2.98vh; ">
         <div style="display: inline-block;">
-        <select>
-            <option value = >최신 순</option>
-            <option>추천 순</option>
-            <option>정확도 순</option>
+        <select id="sort_select_box" name="sort_select_box">
+            <option value="1">최신 순</option>
+            {#            현재 주소에서 &sorted=1 파라미터 붙을때#}
+            {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=1 #}
+            <option value="2">추천 순</option>
+            {#            현재 주소에서 &sorted=2 파라미터 붙을때#}
+            {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=2 #}
+            <option value="3">정확도 순</option>
+            {#            현재 주소에서 &sorted=3 파라미터 붙을때#}
+            {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=3 #}
         </select>
             </div>
         <div style="display: inline-block;">
@@ -41,30 +46,26 @@
     <div style="border: 3px; margin: auto 8vh auto; line-height: 2.8vh;height: 17.6vh ;" >
         <img class="left-side-room-img" align = "left" style= " height: 12vh; width :6.8vw; " src="{% static 'images/45.png' %}"  >
 
-        <strong><span style="font-size: 23px; line-height: 2.5vw;">&ensp;최신 리뷰 제목{{ review.reviewTitle }}</span></strong> <span style = "float : right;"> 추천 수 {{ room.builtYear }} </span>
-        <div sytle = "color: #ECECEC;">&ensp; 리뷰내용리뷰내용리뷰내용리뷰내용리뷰내용리뷰내용리뷰내용리뷰내용{{ room.commonInfo }}</div>
-        <span style = "color : #A23355 ;font-size: 2vw *3.7vh; letter-spacing :1vw; ">&ensp;ㅇㅏㅇㅣㅋㅗㄴ</span>
-
+        <strong><span style="font-size: 23px; line-height: 2.5vw;">&ensp;
+{#                리뷰 제목 #}
+                최신 리뷰 제목 -> {{ review.reviewTitle }}</span></strong>
+        <span style = "float : right;">
+{#            추천 수 데이터 #}
+            추천 수 {{ review.recommendedOn|length }}</span>
+        <div sytle = "color: #ECECEC;">&ensp;
+{#            리뷰 내용 데이터 #}
+            리뷰내용 -> {{ review.reviewSentence }}</div>
+        <span style = "color : #A23355 ;font-size: 2vw *3.7vh; letter-spacing :1vw; ">&ensp;
+{#            리뷰별 아이콘 데이터 목록 #}
+            아이콘 -> (추가예정)</span>
     </div>
 
 {% endfor %}
 
 {% endblock %}
 
-
-
-
 </body>
 <script>
-<!--    1. reviews 데이터를 어디 변수 잠깐 저장
-    var reviews = [[ reviews ]]
-
-2. reviews 데이터의
-최신순 : 날짜 reviewDate 필드에 따라서 정렬
-추천수순 : recommend 필드 값에 따라서 정렬
-정확도순 : -->
-
-3. 정렬순 버튼을 클릭하면, 연결 필요
 
 </script>
 </html>
