--- a/templates/room_test.html
+++ b/templates/room_test.html
@@ -3,7 +3,8 @@
 {% block left_side_bar %}
     <link rel="stylesheet" href="{% static 'css/normalUserRoomReadTemplate.css' %}">
     <div style="height: 100% ;text-align:center" >
-        <img class="left-side-room-img" style= "display: block; margin: 2.8vh auto 2.8vh auto; height: 13vw; width :23vh;" src="{% static 'images/roomImage/' %}{{room.id}}.png">
+        <img class="left-side-room-img" style= "display: block; margin: 2.8vh auto 2.8vh auto;
+            height: 13vw; width :23vh;" src="{% static 'images/roomImage/' %}{{room.id}}.png">
         <div style ="font-size : 20px;">
             <strong><span>주소:</span><span>{{ room.address }}</span></strong>
         </div>
@@ -45,7 +46,7 @@
         <div style="border: 3px; margin: auto 0 auto; line-height: 2.8vh;height: 20vh;" >
             <div style= "height: 12vh; width :6.8vw; display:inline-block; float:left;">
                 {% if review.additionalImage %}
-                    <img class="left-side-room-img" src="{% static 'images/' %}{{review.additionalImage|first}}"  >
+                    <img class="left-side-room-img" src="{% static 'images/' %}{{review.additionalImage|first}}.png">
                 {% endif %}
             </div>
             <strong><span style="font-size: 23px; line-height: 2.5vw;">&ensp;
@@ -59,7 +60,12 @@
                 리뷰내용 -> {{ review.reviewSentence }}</div>
             <span style = "color : #A23355 ;font-size: 1.88vw; letter-spacing :1vw; ">&ensp;
     {#            리뷰별 아이콘 데이터 목록 #}
-                아이콘 -> (추가예정)</span>
+                {% if review.includedIcon %}
+                    {% for icon in review.includedIcon %}
+                        <img src="{% static 'images/iconImage/' %}{{ icon }}.png">
+                    {% endfor %}
+                {% endif %}
+            </span>
         </div>
     {% endfor %}
 </div>
