--- a/templates/tt.html
+++ b/templates/tt.html
@@ -1,40 +1,81 @@
-{% extends 'normal_user_base.html' %}
-{% load index static %}
-{% block main_contents %}
+{% load static %}
 
-<form action="{% url 'searchTest' %}" method="get">
-    {% csrf_token %}
-    <div id="built_year_error" style="display:block">
-    </div>
-    <fieldset id="id_공통_정보" style="display:inline-block;">
-        <legend>공통 정보 </legend>
-        <label for="id_공통_정보_0">
-            <input type="checkbox" name="공통_정보" value="ParkingLot" id="id_공통_정보_0">
-            주차장
-        </label>
-        <label for="id_공통_정보_1">
-            <input type="checkbox" name="공통_정보" value="Elevator" id="id_공통_정보_1">
-            엘리베이터
-        </label>
-        <label for="id_공통_정보_2">
-            <input type="checkbox" name="공통_정보" value="CCTV" id="id_공통_정보_2">
-            CCTV
-        </label>
-    </fieldset>
-    <fieldset style="width:183px; display:inline-block;">
-        <legend>건물 연식</legend>
-        <input type="number" name="built_from" value="1960" min="1960" max="2022" required id="id_built_from">
-         ~
-        <input type="number" name="built_to" value="2022" min="1960" max="2022" required id="id_built_to">
-    </fieldset>
-    <button type="submit">submit</button>
-</form>
-    {% for error in searchForm.non_field_errors.as_json|to_json %}
-        {% if error|get_item:'code' == 'built_year_error' %}
-            <!- 연도 오류 메시지 표시하는 div를 나타나게 하고, 내용 출력 ->
-            <script>
-                document.getElementById('built_year').innerText = "{{error|get_item:'message'}}"
-            </script>
-        {% endif %}
-    {% endfor %}
-{% endblock %}
+
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Minimal example</title>
+        <link href="{% static 'ajax_datatable/css/style.css' %}" rel="stylesheet" />
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.12.1/datatables.min.css"/>
+
+        <style>
+            body {
+                background-color: #eee;
+                padding: 40px;
+            }
+            table {
+                border: 2px solid #ccc;
+                border-collapse: collapse;
+                width: 80%;
+            }
+            table th {
+                border: 1px solid #ccc;
+                background-color: #333;
+                color: #fff;
+            }
+            table td {
+                border: 1px solid #ccc;
+            }
+            .dataTables_filter input {
+                background-color: #ffe;
+                margin: 8px 0;
+            }
+            .datatable-column-filter-row input {
+                background-color: #ffe;
+                border: none;
+                padding: 0;
+                margin: 0;
+            }
+            .dataTables_paginate {
+                margin: 8px 0;
+            }
+            .paginate_button {
+                border: 1px solid #ccc;
+                padding: 4px;
+                cursor: pointer;
+                background-color: #ddd;
+            }
+
+        </style>
+    </head>
+    <body>
+        <h3>Minimal example for django-ajax-datatable</h3>
+        <table id="datatable_permissions">
+        </table>
+
+        <script  src="https://code.jquery.com/jquery-latest.min.js"></script>
+        <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.12.1/datatables.min.js"></script>
+        <script type="text/javascript" src="{% static 'ajax_datatable/js/utils.js' %}"></script>
+        <script type="application/javascript">
+
+            $(document).ready(function() {
+                AjaxDatatableViewUtils.initialize_table(
+                    $('#datatable_permissions'),
+                    "{% url 'ajax_datatable_reviews' %}",
+                    {
+                        // extra_options (example)
+                        processing: false,
+                        autoWidth: false,
+                        full_row_select: true,
+                        scrollX: false
+                    }, {
+                        // extra_data
+                        // ...
+                    },
+                );
+            });
+
+        </script>
+    </body>
+</html>
