--- a/templates/normal_user_review_write.html
+++ b/templates/normal_user_review_write.html
@@ -4,6 +4,7 @@
 
 {%block main_contents %}
 <link rel="stylesheet" href="{% static 'css/normalUserReviewWriteTemplate.css' %}">
+<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 <div id="icons" style="position:relative; display:none; float:left; height:500px; width:200px; border:1px solid green;">
 
 </div>
